extract handler from router, add view and model

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,12 @@
 
 <h1>Hi Tom!</h1>
 
+{{range .books}}
+	<a href="/book/{.ID}">
+		<h2>{{.Title}}</h2>
+	</a>
+	<p>by {{.Author}}</p>
+{{end}}
+
 <!--Embed the footer.html template at this location-->
 {{ template "footer.html" .}}
