--- a/templates/book.html
+++ b/templates/book.html
@@ -8,9 +8,9 @@
 	<!--Embed the menu.html template at this location-->
 		{{ template "menu.html" . }}
 
-		<h1>{{.book.Title}}</h1>
+		<h1>{{.payload.Title}}</h1>
 
-		<p>{{.book.Author}}</p>
+		<p>{{.payload.Author}}</p>
 
 		{{ template "footer.html" .}}
 	</body>
