--- a/templates/success.html
+++ b/templates/success.html
@@ -1,18 +1,17 @@
-<!--header.html-->
-
 <!doctype html>
 <html>
 	{{ template "header.html" .}}
 
 	<body class="container">
-	<!--Embed the menu.html template at this location-->
+		<!--Embed the menu.html template at this location-->
 		{{ template "menu.html" . }}
 
-		<h1 style="color: #65854E">{{.payload.Title}}</h1>
+		<label style="color: green">保存成功</label>
+
+		<h1>{{.payload.Title}}</h1>
 
 		<p>{{.payload.Author}}</p>
 
 		{{ template "footer.html" .}}
 	</body>
-
 </html>
